<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fi.oulu.tol.esde_2016_014.ohapclient2016_014.DeviceActivity">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_value"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:layout_below="@+id/textView_description"
        android:layout_centerHorizontal="true"
        android:text="@string/device_switch" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breadcrump"
        android:id="@+id/textView_path"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="15dp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/device_name"
        android:id="@+id/textView_name"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView_path"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/device_desc"
        android:id="@+id/textView_description"
        android:layout_below="@+id/textView_name"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar_value"
        android:progress="0"
        android:indeterminate="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:mirrorForRtl="true"
        android:max="100"
        android:layout_below="@+id/switch_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_decimal_progress"
        android:id="@+id/textView_decimal_progress"
        android:layout_below="@+id/seekBar_value"
        android:layout_centerHorizontal="true"
        android:textSize="30dp" />

</RelativeLayout>
